--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+}
+
 .game-board {
   display: grid;
   height: 500px;
@@ -31,6 +44,11 @@
 }
 
 .modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   background-color: #DDDDDD;
   margin: 15% auto;
   padding: 20px;
