Added logic to allow two player games with names

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 .main {
   display: flex;
   justify-content: center;
+  visibility: hidden;
 }
 
 .game-board {
@@ -31,7 +32,7 @@
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.modal {
+.modal-result, .modal-playerselect {
   display: none;
   position: fixed;
   z-index: 1;
